@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020181121"
-#define public MagickPackageReleaseDate "snapshot-20181121"
+#define public MagickPackageVersionAddendum ".020181122"
+#define public MagickPackageReleaseDate "snapshot-20181122"
